crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__bytecode_compound_and.snap
---
source: crates/flight-rules/src/lib.rs
expression: compiled.bytecode
---
BytecodeProgram {
    instructions: [
        LoadVar(
            0,
        ),
        LoadConst(
            0.0,
        ),
        Compare(
            NotEqual,
        ),
        JumpFalse(
            5,
        ),
        Action(
            0,
        ),
    ],
    variable_map: {
        "gear_down && flaps_extended": 0,
    },
    hysteresis_map: {},
    hysteresis_bands: [],
    actions: [
        LedOn {
            target: "LAND",
        },
    ],
    stack_size: 8,
}
