crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__bytecode_compound_or.snap
---
source: crates/flight-rules/src/lib.rs
expression: stable
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - LoadVar: 1
  - LoadConst: 0
  - Compare: NotEqual
  - Or
  - JumpFalse: 9
  - Action: 0
variable_map:
  flaps_extended: 1
  gear_down: 0
hysteresis_map: {}
actions:
  - LedOn:
      target: LAND
stack_size: 8
