crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__bytecode_gear_down_panel.snap
---
source: crates/flight-rules/src/lib.rs
expression: compiled.bytecode
---
BytecodeProgram {
    instructions: [
        LoadVar(
            0,
        ),
        LoadConst(
            0.0,
        ),
        Compare(
            NotEqual,
        ),
        JumpFalse(
            5,
        ),
        Action(
            0,
        ),
    ],
    variable_map: {
        "gear_DOWN": 0,
    },
    hysteresis_map: {},
    hysteresis_bands: [],
    actions: [
        LedOn {
            target: "GEAR",
        },
    ],
    stack_size: 8,
}
