crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__bytecode_multi_rule.snap
---
source: crates/flight-rules/src/lib.rs
expression: stable
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - JumpFalse: 5
  - Action: 0
  - LoadVar: 1
  - LoadConst: 200
  - Compare: Greater
  - JumpFalse: 10
  - Action: 1
variable_map:
  gear_down: 0
  ias: 1
hysteresis_map: {}
actions:
  - LedOn:
      target: GEAR
  - LedBlink:
      target: SPEED
      rate_hz: 3
stack_size: 8
