crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__bytecode_negated_boolean.snap
---
source: crates/flight-rules/src/lib.rs
expression: stable
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - Not
  - JumpFalse: 6
  - Action: 0
variable_map:
  flap_deployed: 0
hysteresis_map: {}
actions:
  - LedOff:
      target: indexer
stack_size: 8
