crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_bare_negation.snap
---
source: crates/flight-rules/src/lib.rs
expression: err
---
Validation(
    "Rule 1: Invalid condition syntax: negation requires a variable name",
)
