crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_empty_action.snap
---
source: crates/flight-rules/src/lib.rs
assertion_line: 1151
expression: err
---
Validation(
    "Rule 1: Rule action cannot be empty",
)
