crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_empty_when.snap
---
source: crates/flight-rules/src/lib.rs
assertion_line: 1135
expression: err
---
Validation(
    "Rule 1: Rule condition cannot be empty",
)
