crates/flight-rules/src/snapshots/flight_rules__snapshot_tests__error_invalid_action.snap
---
source: crates/flight-rules/src/lib.rs
expression: err
---
Validation(
    "Rule 1: Invalid action syntax: Validation error: Unsupported action syntax: invalid.action()",
)
